# OmniBotCC

./: README.md
3. Piezas para impresion 3D/: Base_Motor_x4.stl  Descripcion_Piezas.docx  Eje_Llanta_x4.stl  Nivel1_Base.stl  Nivel1_Pared_x2.stl  Nivel2.stl  Nivel3.stl  Soporte_AS5600_L_x2.stl  Soporte_AS5600_R_x2.stl
Configuracion AS5600/AS5600_Configuration/: AS5600_Configuration.ino
ESP32/OmniBot_CC/: CMakeLists.txt  sdkconfig.old
ESP32/OmniBot_CC/main/: CMakeLists.txt
ESP32/OmniRobot_CC/: README.md  sdkconfig
ESP32/OmniRobot_CC/components/as5600/: as5600.c  (+1 more)
ESP32/OmniRobot_CC/main/: AS5600_Configuration.c  CMakeLists.txt  main.c
Funciones_Matlab/: Calibracion_Robot.m  Inicio_Rapido.m  LecturaADC.m  Offsets.mat  Prueba1.m  Prueba2.m  README.md  README.mlx  Seguimiento_Trayectorias.m  Seguimiento_marcador.m  Simulacion_Simulink.slx  Simulacion_Trayectorias.m  Trayectoria_Omnidireccional.m  Trayectorias_Mapa.m  Valores_markers.mat  analog_ESP32_datos.xlsx  genmap.m  robot_connect.m  robot_disconnect.m  robot_emergency_stop.m  robot_pose_conf.m  robot_send_WiFi.m  robot_set_ustep.m  robot_set_velocities.m  robot_start.m  robot_stop.m  robotat_get_pose.m  robotat_trvisualize.m
Funciones_Matlab/Simulaciones/: Simulacion_Marcador.m  Simulacion_Plataforma_Movil.m  Simulacion_Trayectorias_Mapa.m  Simulacion_Trayectorias_Omni.m
Funciones_Matlab/slprj/_jitprj/: sWCmWWslSdauMBphnDWAnWG.l  sWCmWWslSdauMBphnDWAnWG.mat
Funciones_Python/: Ejemplo.py  Inicio Rapido.py  README.md  robot_connect.py  robotat.py  robotat_connect.py  robotat_disconnect.py  udp_robot.py
(+19 files in other folders)
